--- a/geeknav.css
+++ b/geeknav.css
@@ -129,7 +129,7 @@ footer {
   left: 0;
   right: 0;
   bottom: 0;
-  background: #2098D1;
+  background: #3E3D49;
   border-radius: 100%;
   -webkit-transform: scale(0);
   transform: scale(0);
